Create master branch via GitHub

--- a/index.html
+++ b/index.html
@@ -19,7 +19,21 @@
     </section>
 
     <section class="main-content">
-      
+      <h1>
+<a id="planetapp" class="anchor" href="#planetapp" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>planetapp</h1>
+<p>A new Flutter application.</p>
+<h2>
+<a id="getting-started" class="anchor" href="#getting-started" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Getting Started</h2>
+<p>This project is a Done purely on Flutter.
+This is a starting project which is easy  for budding developers and who shifting their interest towards app development
+A few resources to get you started if this is your first Flutter project:</p>
+<ul>
+<li><a href="https://flutter.dev/docs/get-started/codelab">Lab: Write your first Flutter app</a></li>
+<li><a href="https://flutter.dev/docs/cookbook">Cookbook: Useful Flutter samples</a></li>
+</ul>
+<p>For help getting started with Flutter, view our
+<a href="https://flutter.dev/docs">online documentation</a>, which offers tutorials,
+samples, guidance on mobile development, and a full API reference.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/drunken-monkey-ops/planet.github.io">Planet.GitHub.io</a> is maintained by <a href="https://github.com/drunken-monkey-ops">drunken-monkey-ops</a>.</span>
